--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>İstiklal Marşı</h1>
-<p>Korkma!Sönmez bu şafaklarda yüzen al sancak;<br>
-Sönmeden yurdumun üstünde tüten en son ocak.</p>
+<h1>İstiklâl Marşı</h1>
+
+<p>Korkma! Sönmez bu şafaklarda yüzen al sancak;<br>
+Sönmeden yurdumun üstünde tüten en son ocak.<br>
+O benim milletimin yıldızıdır, parlayacak;<br>
+O benimdir, o benim milletimindir ancak!</p>
+
+<p>Çatma, kurban olayım çehreni ey nazlı hilal!<br>
+Kahraman ırkıma bir gül... ne bu şiddet bu celal?<br>
+Sana olmaz dökülen kanlarımız sonra helal;<br>
+Hakkıdır, hakka tapan milletimin istiklâl.</p>
+
