--- a/index.html
+++ b/index.html
@@ -10,3 +10,15 @@ Kahraman ırkıma bir gül... ne bu şiddet bu celal?<br>
 Sana olmaz dökülen kanlarımız sonra helal;<br>
 Hakkıdır, hakka tapan milletimin istiklâl.</p>
 
+<p>Ben ezelden beridir hür yaşadım, hür yaşarım.<br>
+Hangi çılgın bana zincir vuracakmış?Şaşarım!<br>
+Kükremiş sel gibiyim;bendimi çiğner, aşarım;<br>
+Yırtarım dağları, enginlere sığmam taşarım.</p>
+
+<p>Garb'ın âfâkını sarmışsa çelik zırhlı duvar;<br>
+Benim îman dolu göğüsüm gibi serhaddim var.<br>
+Ulusun, korkma!Nasıl böylebirîmanı boğar,<br>
+"Medeniyet!" dediğin tek dişi kalmış canavar?</p>
+
+
+
