--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+    <title>istiklal marsi</title>
+    <body>
 <h1>İstiklâl Marşı</h1>
 
 <p>Korkma! Sönmez bu şafaklarda yüzen al sancak;<br>
@@ -21,4 +24,5 @@ Ulusun, korkma!Nasıl böylebirîmanı boğar,<br>
 "Medeniyet!" dediğin tek dişi kalmış canavar?</p>
 
 
-
+</body>
+</html>
